; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/wilba_tech/extr_wt_rgb_backlight.c_backlight_effect_rgb_test.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/wilba_tech/extr_wt_rgb_backlight.c_backlight_effect_rgb_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_tick = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @backlight_effect_rgb_test() #0 {
  %1 = load i32, i32* @g_tick, align 4
  %2 = and i32 %1, 48
  %3 = ashr i32 %2, 4
  switch i32 %3, label %12 [
    i32 0, label %4
    i32 1, label %6
    i32 2, label %8
    i32 3, label %10
  ]

4:                                                ; preds = %0
  %5 = call i32 @backlight_set_color_all(i32 255, i32 0, i32 0)
  br label %12

6:                                                ; preds = %0
  %7 = call i32 @backlight_set_color_all(i32 0, i32 255, i32 0)
  br label %12

8:                                                ; preds = %0
  %9 = call i32 @backlight_set_color_all(i32 0, i32 0, i32 255)
  br label %12

10:                                               ; preds = %0
  %11 = call i32 @backlight_set_color_all(i32 255, i32 255, i32 255)
  br label %12

12:                                               ; preds = %0, %10, %8, %6, %4
  ret void
}

declare dso_local i32 @backlight_set_color_all(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
